# course-proj

./: .env  Cargo.toml  README.md
migrations/2023-11-13-014719_it_hub/: down.sql  up.sql
src/: actors.rs  db_model.rs  insertables.rs  main.rs  messages.rs  schema.rs  services.rs
src/actors/: auth_user.rs  change_pass.rs  create_user.rs
src/actors/courses/: create_course.rs  delete_course.rs  edit_course.rs  get_courses.rs
src/actors/lessons/: create_lesson.rs
src/actors/user_services/: auth_user.rs  change_pass.rs  check_role.rs  create_user.rs  mod.rs
src/db_model/: course.rs  lesson.rs  user.rs
src/insertables/: new_course.rs  new_lesson.rs  new_user.rs
src/messages/: auth_user.rs  change_pass.rs  create_user.rs
src/messages/courses/: create_course.rs  delete_course.rs  edit_course.rs  get_courses.rs  mod.rs
src/messages/lessons/: create_lesson.rs  mod.rs
src/messages/user_services/: check_role.rs  create_user.rs  mod.rs
src/services/: authentification.rs  user_services.rs
src/services/courses/: create_course.rs  delete_course.rs  edit_course.rs  get_course.rs  mod.rs
src/services/lessons/: create_lesson.rs
src/services/user_services/: authentification.rs  change_password.rs  create_admin.rs  create_user.rs  mod.rs
